--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,9 +1,5 @@
 name: Run spec tests and linter
 
-defaults:
-  run:
-    shell: zsh {0}
-
 env:
   TEST_PRESET_TYPE: "minimal"
 
@@ -25,7 +21,7 @@ on:
 
 jobs:
   preclear:
-      runs-on: self-hosted
+      runs-on: ubuntu-latest
       if: always()
       steps:
         - name: 'Cleanup build folder'
@@ -36,7 +32,7 @@ jobs:
             ls -la ./
 
   table_of_contents:
-   runs-on: self-hosted
+   runs-on: ubuntu-latest
    needs: preclear
    steps:
       - name: Checkout this repo
@@ -45,7 +41,7 @@ jobs:
         run: sudo npm install -g doctoc@2.2.0 && make check_toc
 
   codespell:
-   runs-on: self-hosted
+   runs-on: ubuntu-latest
    needs: preclear
    steps:
       - name: Checkout this repo
@@ -54,7 +50,7 @@ jobs:
         run: pip install 'codespell<3.0.0,>=2.0.0' --user &&  make codespell
 
   lint:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: preclear
     steps:
       - name: Checkout this repo
@@ -67,7 +63,7 @@ jobs:
         run: make lint_generators
 
   pyspec-tests:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: [preclear,lint,codespell,table_of_contents]
     strategy:
       matrix:
@@ -102,7 +98,7 @@ jobs:
           path: tests/core/pyspec/test-reports
 
   cleanup:
-      runs-on: self-hosted
+      runs-on: ubuntu-latest
       needs: [preclear,pyspec-tests,codespell,lint,table_of_contents]
       if: always()
       steps:
